--- a/index.html
+++ b/index.html
@@ -4,11 +4,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>My first Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="open-sans-normal">
+  <header class="header">
+    <nav>
+      <ul>
+        <li><a class="text-primary" href="">
+            <h3 class="logo">LOGO </h3>
+          </a></li>
+        <li><a href=""><button>Sign Up</button></a></li>
+      </ul>
+    </nav>
 
+    <div class="banner">
+      <div class="banner-design">
+        <h1 class="banner-title text-color">Cool Dark UI Template for <br> Webflow Agencies!</h1>
+        <button class="btn-primary focus">Stay Focused</button>
+      </div>
+    </div>
+    <nav>
+  </header>
+  <main>
+
+  </main>
+  <footer>
+
+  </footer>
 </body>
 
 </html>
