--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body class="open-sans-normal">
+  <!--header section-->
   <header class="header">
     <nav>
       <ul>
@@ -28,7 +29,19 @@
     <nav>
   </header>
   <main>
-
+    <!--action section-->
+    <section class="action">
+      <div class="left-action">
+        <h3 class="h3-action text-color">
+          See It in Action
+        </h3>
+        <p class="p-text-color">
+          Explore the live preview and imagine your <br>brand in this bold new look.
+        </p>
+        <button class="btn-primary">Launch Live preview</button>
+      </div>
+      <img class="action-pic" src="Assets/wc-big.png" alt="">
+    </section>
   </main>
   <footer>
 
