users information added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,40 @@
         </p>
         <button class="btn-primary">Launch Live preview</button>
       </div>
-      <img class="action-pic" src="Assets/wc-big.png" alt="">
+      <img class="action-pic" src="Assets/wc-mini.png" alt="">
+    </section>
+
+    <!--productive users section-->
+    <section class="users">
+      <div class="user-info">
+        <h2 class="user-info-h2">Joined Thousands of Productive Users</h2>
+        <div class="user-satisfaction">
+          <div class="active-users">
+            <h1 class="user-h1 text-primary">50K</h1>
+            <p class="user-p text-color">Active Users</p>
+          </div>
+          <div class="focus-sessions">
+            <h1 class="user-h1  text-primary">2M+</h1>
+            <p class="user-p text-color">Focus sessions</p>
+          </div>
+          <div class="satisfaction-rate">
+            <h1 class="user-h1  text-primary">95%</h1>
+            <p class="user-p text-color">satisfaction Rate</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--review section-->
+    <section class="review">
+      <h1 class="review-h1 text-color"> What our users say</h1>
+      <div class="review-cards">
+
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+
+      </div>
+
     </section>
   </main>
   <footer>
