--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My first Portfolio</title>
+  <!--CSS Stylesheet-->
   <link rel="stylesheet" href="style.css">
+  <!--font awesome icon connection-->
+  <script src="https://kit.fontawesome.com/ce1824d1f1.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="open-sans-normal">
@@ -63,15 +66,111 @@
         </div>
       </div>
     </section>
-    <!--review section-->
+    <!--users review section-->
     <section class="review">
       <h1 class="review-h1 text-color"> What our users say</h1>
       <div class="review-cards">
 
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card">
+          <!--star icons-->
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+          <h3 class="review-h3">Loved by Designers
+          </h3>
+          <p class="review-p">
+            This template instantly leveled up our <br>presence.” – Studio Vertex
+          </p>
+          <div class="avatar-block">
+            <div class="avatar">
+              <img src="Assets/avatar.png" alt="">
+            </div>
+            <div class="avatar-info">
+              <p>Reviewer name</p>
+              <input type="text" placeholder="Date">
+            </div>
+          </div>
 
+        </div>
+        <div class="card">
+          <!--star icons-->
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+          <h3 class="review-h3">Loved by Designers
+          </h3>
+          <p class="review-p">
+            This template instantly leveled up our <br> presence.” – Studio Vertex
+          </p>
+          <div class="avatar-block">
+            <div class="avatar">
+              <img src="Assets/avatar.png" alt="">
+            </div>
+            <div class="avatar-info">
+              <p>Reviewer name</p>
+              <input type="text" placeholder="Date">
+            </div>
+          </div>
+
+        </div>
+        <div class="card">
+          <!--star icons-->
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+          <h3 class="review-h3">Loved by Designers
+          </h3>
+          <p class="review-p">
+            This template instantly leveled up our <br>presence.” – Studio Vertex
+          </p>
+          <div class="avatar-block">
+            <div class="avatar">
+              <img src="Assets/avatar.png" alt="">
+            </div>
+            <div class="avatar-info">
+              <p>Reviewer name</p>
+              <input type="text" placeholder="Date">
+            </div>
+          </div>
+
+        </div>
+        <div class="card">
+          <!--star icons-->
+          <div class="stars">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+          <h3 class="review-h3">Loved by Designers
+          </h3>
+          <p class="review-p">
+            This template instantly leveled up our <br>presence.” – Studio Vertex
+          </p>
+          <div class="avatar-block">
+            <div class="avatar">
+              <img src="Assets/avatar.png" alt="">
+            </div>
+            <div class="avatar-info">
+              <p>Reviewer name</p>
+              <input type="text" placeholder="Date">
+            </div>
+          </div>
+
+        </div>
       </div>
 
     </section>
