Focus better section added

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         </div>
       </div>
     </section>
+
     <!--users review section-->
     <section class="review">
       <h1 class="review-h1 text-color"> What our users say</h1>
@@ -174,6 +175,23 @@
       </div>
 
     </section>
+
+    <!--focus section-->
+    <section class="ready-to-focus">
+      <div class="focus-items">
+        <div class="focus-text">
+          <h1 class="focus-h1">Ready to focus better</h1>
+          <p class="focus-p text-color">This template instantly leveled up our presence.” – Studio Vertex
+          </p>
+          <button class="btn-primary">Ger Started Free</button>
+        </div>
+        <div class="focus-img">
+          <img class="focus-img1" src="Assets/wc-big.png" alt="">
+        </div>
+      </div>
+    </section>
+
+    <!--contact section-->
   </main>
   <footer>
 
