--- a/index.html
+++ b/index.html
@@ -192,9 +192,52 @@
     </section>
 
     <!--contact section-->
+    <section class="messaging">
+      <div class="connection">
+
+        <div class="text">
+          <h1 class="connect-h1">Let's Get in <br>Touch</h1>
+        </div>
+
+        <div class="form">
+          <form action="" class="form1">
+            <label for="email">Email</label>
+            <br>
+            <input type="email" placeholder="Enter your email">
+            <br>
+            <label for="name">Name</label>
+            <br>
+            <input type="text" placeholder="Enter your Full name">
+            <br>
+            <label for="message">Message</label>
+            <br>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Write your message"></textarea>
+            <br>
+
+            <button class="btn-primary connect-btn">Get in Touch</button>
+          </form>
+        </div>
+
+      </div>
+    </section>
   </main>
   <footer>
+    <!--Footer section-->
+    <section class="footer-section">
+      <h1 class="footer-h1 text-primary"> LOGO </h1>
+      <p class="text-color">
+        Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring
+        your
+        vision to life.
+      </p>
+      <div class="footer">
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">How it Works</a>
+        <a href="">Services</a>
 
+      </div>
+    </section>
   </footer>
 </body>
 
