footer design complete

--- a/index.html
+++ b/index.html
@@ -212,7 +212,6 @@
             <label for="message">Message</label>
             <br>
             <textarea name="" id="" cols="30" rows="10" placeholder="Write your message"></textarea>
-            <br>
 
             <button class="btn-primary connect-btn">Get in Touch</button>
           </form>
@@ -224,18 +223,20 @@
   <footer>
     <!--Footer section-->
     <section class="footer-section">
-      <h1 class="footer-h1 text-primary"> LOGO </h1>
-      <p class="text-color">
-        Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring
-        your
-        vision to life.
-      </p>
-      <div class="footer">
-        <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">How it Works</a>
-        <a href="">Services</a>
-
+      <div class="footer-center">
+        <h1 class="footer-h1 text-primary"> LOGO </h1>
+        <p class="footer-p">
+          Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can
+          bring
+          your
+          vision to life.
+        </p>
+        <div class="footer-nav">
+          <a href="">Home</a>
+          <a href="">About</a>
+          <a href="">How it Works</a>
+          <a href="">Services</a>
+        </div>
       </div>
     </section>
   </footer>
