--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body class="open-sans-normal">
   <!--header section-->
-  <header class="header">
+  <header class="header" id="header">
     <nav>
       <ul>
         <li><a class="text-primary" href="">
@@ -33,7 +33,7 @@
   </header>
   <main>
     <!--action section-->
-    <section class="action">
+    <section class="action" id="action">
       <div class="left-action">
         <h3 class="h3-action text-color">
           See It in Action
@@ -68,7 +68,7 @@
     </section>
 
     <!--users review section-->
-    <section class="review">
+    <section class="review" id="review">
       <h1 class="review-h1 text-color"> What our users say</h1>
       <div class="review-cards">
 
@@ -177,7 +177,7 @@
     </section>
 
     <!--focus section-->
-    <section class="ready-to-focus">
+    <section class="ready-to-focus" id="ready-to-focus">
       <div class="focus-items">
         <div class="focus-text">
           <h1 class="focus-h1">Ready to focus better</h1>
@@ -232,10 +232,10 @@
           vision to life.
         </p>
         <div class="footer-nav">
-          <a href="">Home</a>
-          <a href="">About</a>
-          <a href="">How it Works</a>
-          <a href="">Services</a>
+          <a href="#header">Home</a>
+          <a href="#action">About</a>
+          <a href="#review">How it Works</a>
+          <a href="#ready-to-focus">Services</a>
         </div>
       </div>
     </section>
