--- a/index.html
+++ b/index.html
@@ -202,15 +202,10 @@
         <div class="form">
           <form action="" class="form1">
             <label for="email">Email</label>
-            <br>
-            <input type="email" placeholder="Enter your email">
-            <br>
+            <input type="email" class="emaill" placeholder="Enter your email">
             <label for="name">Name</label>
-            <br>
-            <input type="text" placeholder="Enter your Full name">
-            <br>
+            <input type="text" class="name" placeholder="Enter your Full name">
             <label for="message">Message</label>
-            <br>
             <textarea name="" id="" cols="30" rows="10" placeholder="Write your message"></textarea>
 
             <button class="btn-primary connect-btn">Get in Touch</button>
